# Indian-Recipe-Exchange

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  REPORT.md  SECURITY.md  app.py  bug_report.md  default.md  extensions.json  feature_request.md  launch.json  pyproject.toml  recipes.json  requirements.txt  settings.json  tasks.json
