[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-recipe-exchange"
version = "0.1.0"
description = "A platform for sharing and discovering Indian recipes across different languages and regions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
    {name = "VisWam.AI Team", email = "contact@viswam.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "streamlit>=1.22.0",
    "transformers>=4.30.0",
    "indic-transliteration>=2.3.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://gitlab.com/viswam.ai/indian-recipe-exchange"
"Bug Tracker" = "https://gitlab.com/viswam.ai/indian-recipe-exchange/issues"
"Documentation" = "https://gitlab.com/viswam.ai/indian-recipe-exchange/wiki"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"